0.06:
	* make rand_chars public

	* remove old DSA-based code

	* test suite for new DH/HMAC-based code

0.05:
        * start implementing the new DH + HMAC-SHA1 spec, instead
	  of being DSA-based.  The DSA code is still working for now,
	  and it'll do either protocol, but it'll be removed in time.

0.04:
	* add "signed_return" method and docs

	* require Convert::PEM 0.07, which was always required,
	  but I forgot its version number before

	* add "redirect_for_setup" option on handle_page and docs

0.03:
        * stupid push_url_arg bugfix

	* more tests

0.02:
        * checkid_immediate vs checkid_setup mode (handle_page can return
	  $type of "setup")

0.01:
        * initial release.  test suite works.  no example app yet.

	* requires Crypt::DSA or Crypt::OpenSSL::DSA